--- a/40-49.ipynb
+++ b/40-49.ipynb
@@ -29,29 +29,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Morph:\n",
+    "    def __init__(self, surface, base, pos, pos1):\n",
+    "        self.surface = surface\n",
+    "        self.base = base\n",
+    "        self.pos = pos\n",
+    "        self.pos1 = pos1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cabocha.analyzer import CaboChaAnalyzer\n",
+    "import zipfile\n",
+    "with zipfile.ZipFile('files/ai.ja.zip') as zipf:\n",
+    "    with zipf.open('ai.ja.txt',mode='r') as f:\n",
+    "        text = f.read().decode('utf-8')\n",
+    "analyzer = CaboChaAnalyzer()\n",
+    "\n",
+    "\n",
+    "tree = analyzer.parse(text)\n",
+    "morphs = []\n",
+    "for chunk in tree:\n",
+    "    for token in chunk:\n",
+    "        morphs.append(Morph(token.surface,token.genkei,token.pos,token.pos1))\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token(\"日本語\")\n",
-      "Token(\"の\")\n",
-      "Token(\"形態素\")\n",
-      "Token(\"解析\")\n",
-      "Token(\"は\")\n",
-      "Token(\"すごい\")\n"
+      "人工 知能 人工 知能 （ じん こうち のう 、 、 AI 〈 エーアイ 〉 ） と は 、 「 『 計算 （ ） 』 という 概念 と 『 コンピュータ （ "
      ]
     }
    ],
    "source": [
-    "from cabocha.analyzer import CaboChaAnalyzer\n",
-    "analyzer = CaboChaAnalyzer()\n",
-    "tree = analyzer.parse(\"日本語の形態素解析はすごい\")\n",
-    "for chunk in tree:\n",
-    "    for token in chunk:\n",
-    "        print(token)"
+    "for morph in morphs[:30]:\n",
+    "    print(morph.surface,end=\" \")"
    ]
   },
   {
