--- a/40-49.ipynb
+++ b/40-49.ipynb
@@ -78,7 +78,8 @@
    ],
    "source": [
     "for morph in morphs[:30]:\n",
-    "    print(morph.surface,end=\" \")"
+    "    print(morph.surface,end=\" \")\n",
+    "    "
    ]
   },
   {
