--- a/40-49.ipynb
+++ b/40-49.ipynb
@@ -5205,10 +5205,565 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "line = \"\"\n",
+    "for chunks in sentences:\n",
+    "    chunk_id_dict = {chunk.id:chunk for chunk in chunks}\n",
+    "    for chunk in chunks:\n",
+    "\n",
+    "        for morph in chunk.morphs:\n",
+    "            if morph.pos != \"動詞\":\n",
+    "                continue\n",
+    "            line += f\"{morph.base}\\t\"\n",
+    "            postpositions = []\n",
+    "            for src in chunk.srcs:\n",
+    "                for morph in chunk_id_dict[src].morphs:\n",
+    "                    if morph.pos != \"助詞\":\n",
+    "                        continue\n",
+    "                    postpositions.append(morph.base)\n",
+    "            # 辞書順ソート            \n",
+    "            line += ' '.join(sorted(set(postpositions)))\n",
+    "            line += \"\\n\"            \n",
+    "            break\n",
+    "with open('files/45.txt',mode='w') as f:\n",
+    "    f.write(line)\n",
+    "\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  49 する\tを\r\n",
+      "  19 する\tが\r\n",
+      "  15 する\tに\r\n",
+      "  15 する\tと\r\n",
+      "  12 する\tは を\r\n",
+      "  10 する\tに を\r\n",
+      "   9 する\tで を\r\n",
+      "   9 よる\tに\r\n",
+      "   8 する\tが に\r\n",
+      "   8 行う\tを\r\n",
+      "   8 する\t\r\n",
+      "   6 基づく\tに\r\n",
+      "   6 する\tと は\r\n",
+      "   6 呼ぶ\tと\r\n",
+      "   5 する\tに は を\r\n",
+      "   5 する\tと を\r\n",
+      "   5 する\tが を\r\n",
+      "   5 ある\tが\r\n",
+      "   4 関わる\tに も\r\n",
+      "   4 用いる\tを\r\n",
+      "   4 する\tで に\r\n",
+      "   4 する\tて を\r\n",
+      "   4 する\tて と\r\n",
+      "   4 使う\tを\r\n",
+      "   3 述べる\tと\r\n",
+      "   3 超える\tを\r\n",
+      "   3 向ける\tに\r\n",
+      "   3 受ける\tを\r\n",
+      "   3 する\tて に は\r\n",
+      "   3 なる\tに は\r\n",
+      "   3 なる\tが と\r\n",
+      "   3 する\tが で\r\n",
+      "   3 持つ\tを\r\n",
+      "   3 入る\tに\r\n",
+      "   3 する\tは\r\n",
+      "   2 導き出す\tを\r\n",
+      "   2 上回る\tで を\r\n",
+      "   2 考える\t\r\n",
+      "   2 する\tについて\r\n",
+      "   2 する\tとして\r\n",
+      "   2 する\tから を\r\n",
+      "   2 する\tが として に\r\n",
+      "   2 する\tが に は を\r\n",
+      "   2 示す\tて は を\r\n",
+      "   2 含む\tに は も\r\n",
+      "   2 する\tと に は\r\n",
+      "   2 する\tで は を\r\n",
+      "   2 する\tで に を\r\n",
+      "   2 する\tて と は\r\n",
+      "   2 する\tが で を\r\n",
+      "   2 持つ\tが を\r\n",
+      "   2 する\tに は\r\n",
+      "   2 する\tて に\r\n",
+      "   2 する\tが て\r\n",
+      "   2 ある\tて も\r\n",
+      "   2 語る\tを\r\n",
+      "   2 至る\tに\r\n",
+      "   2 経る\tを\r\n",
+      "   2 扱う\tを\r\n",
+      "   2 なる\tに\r\n",
+      "   2 なる\tと\r\n",
+      "   2 する\tで\r\n",
+      "   2 する\tて\r\n",
+      "   2 いう\tと\r\n",
+      "   2 ある\tも\r\n",
+      "   2 思う\t\r\n",
+      "   1 組み合わせる\tを\r\n",
+      "   1 巻き起こす\tだけ て に は を\r\n",
+      "   1 位置づける\tから に を\r\n",
+      "   1 なりすます\tたり で\r\n",
+      "   1 関連付ける\tと など\r\n",
+      "   1 取り上げる\tが て など は ば\r\n",
+      "   1 立ち上がる\tて と に も\r\n",
+      "   1 受け止める\tて は\r\n",
+      "   1 漕ぎ着ける\tに\r\n",
+      "   1 推し進める\tが\r\n",
+      "   1 取り上げる\tを\r\n",
+      "   1 生まれる\tによって\r\n",
+      "   1 生まれる\tから\r\n",
+      "   1 生み出す\tが によって\r\n",
+      "   1 盛り込む\tて に は も\r\n",
+      "   1 作り出す\tで は を\r\n",
+      "   1 もたらす\tに は を\r\n",
+      "   1 見つかる\tが で\r\n",
+      "   1 見いだす\tに を\r\n",
+      "   1 勝ち残る\tが に\r\n",
+      "   1 追い付く\tに\r\n",
+      "   1 見出せる\tが\r",
+      "\r\n",
+      "   1 繰り返す\tを\r\n",
+      "   1 無くなる\tは\r\n",
+      "   1 巻き込む\tも\r\n",
+      "   1 埋め込む\tに\r\n",
+      "   1 合わせる\tに\r\n",
+      "   1 併せ持つ\tを\r\n",
+      "   1 とらえる\tと\r\n",
+      "   1 ふるまう\t\r\n",
+      "   1 超える\tにおける を\r\n",
+      "   1 費やす\tとして を\r\n",
+      "   1 捉える\tとして を\r\n",
+      "   1 上げる\tとして も\r\n",
+      "   1 できる\tながら を\r\n",
+      "   1 しれる\tという は\r\n",
+      "   1 用いる\tから として にかけて\r\n",
+      "   1 目立つ\tから が て で も\r\n",
+      "   1 述べる\tかも て と は\r\n",
+      "   1 考える\tかも て と は\r\n",
+      "   1 集める\tから は を\r\n",
+      "   1 始める\tとも は を\r\n",
+      "   1 用いる\tのみ を\r\n",
+      "   1 始まる\tから は\r\n",
+      "   1 分かる\tから が\r\n",
+      "   1 含める\tまで\r\n",
+      "   1 見せる\tて において は を\r\n",
+      "   1 進める\tが について も\r\n",
+      "   1 起こす\tて に対して を\r\n",
+      "   1 分かる\tが について は\r\n",
+      "   1 できる\tが によって\r\n",
+      "   1 用いる\tが として に は まで\r\n",
+      "   1 できる\tて により は を\r\n",
+      "   1 近づく\tが により\r\n",
+      "   1 挙げる\tが として\r\n",
+      "   1 先立つ\tに により\r\n",
+      "   1 与える\tが など に\r\n",
+      "   1 できる\tて に により は\r\n",
+      "   1 受ける\tて で と とともに は を\r\n",
+      "   1 述べる\tて で に の は も\r\n",
+      "   1 投じる\tて で と に は\r\n",
+      "   1 増やす\tて で に も を\r\n",
+      "   1 鳴らす\tて に は を\r\n",
+      "   1 述べる\tで に の は\r\n",
+      "   1 述べる\tて と に は\r\n",
+      "   1 起こる\tて に は ば\r\n",
+      "   1 答える\tで と ね は\r\n",
+      "   1 求める\tが に は を\r\n",
+      "   1 果たす\tが で に を\r\n",
+      "   1 敗れる\tが で に は\r\n",
+      "   1 上げる\tが で は を\r\n",
+      "   1 鳴らす\tに は を\r\n",
+      "   1 通じる\tに は も\r\n",
+      "   1 述べる\tで と は\r\n",
+      "   1 迎える\tが に を\r\n",
+      "   1 論じる\tが て で\r\n",
+      "   1 訪れる\tが に も\r\n",
+      "   1 続ける\tが て を\r\n",
+      "   1 用いる\tて も を\r\n",
+      "   1 用いる\tて は を\r\n",
+      "   1 用いる\tが で は\r\n",
+      "   1 広がる\tが に は\r\n",
+      "   1 寄せる\tが に を\r\n",
+      "   1 分かる\tか が に\r\n",
+      "   1 付ける\tで に を\r\n",
+      "   1 与える\tに は を\r\n",
+      "   1 できる\tて は も\r\n",
+      "   1 集める\tに を\r\n",
+      "   1 集める\tが を\r\n",
+      "   1 関わる\tが に\r\n",
+      "   1 過ぎる\tに は\r\n",
+      "   1 進める\tて を\r\n",
+      "   1 述べる\tて と\r\n",
+      "   1 迎える\tで を\r\n",
+      "   1 起こる\tに は\r\n",
+      "   1 論じる\tか を\r\n",
+      "   1 試みる\tは を\r\n",
+      "   1 言える\tと も\r\n",
+      "   1 繋がる\tに は\r\n",
+      "   1 異なる\tが で\r\n",
+      "   1 活かす\tに を\r\n",
+      "   1 決める\tて を\r\n",
+      "   1 挙げる\tは を\r\n",
+      "   1 始まる\tて も\r\n",
+      "   1 始まる\tが に\r\n",
+      "   1 変わる\tが は\r\n",
+      "   1 動かす\tで を\r\n",
+      "   1 伝える\tが と\r\n",
+      "   1 代わる\tに を\r\n",
+      "   1 与える\tが に\r\n",
+      "   1 上回る\tが を\r\n",
+      "   1 上げる\tも を\r\n",
+      "   1 できる\tに を\r\n",
+      "   1 できる\tで に\r\n",
+      "   1 鳴らす\tを\r\n",
+      "   1 題する\tと\r\n",
+      "   1 集める\tを\r\n",
+      "   1 起きる\tが\r\n",
+      "   1 論じる\tに\r\n",
+      "   1 認める\tを\r\n",
+      "   1 訴える\tを\r\n",
+      "   1 言える\tと\r\n",
+      "   1 見合う\tに\r\n",
+      "   1 見せる\tを\r\n",
+      "   1 行える\tが\r\n",
+      "   1 考える\tと\r\n",
+      "   1 異なる\tも\r\n",
+      "   1 留まる\tに\r\n",
+      "   1 決める\tを\r\n",
+      "   1 挙げる\tが\r\n",
+      "   1 投じる\tが\r\n",
+      "   1 抑える\tを\r\n",
+      "   1 恐れる\tを\r\n",
+      "   1 応じる\tに\r\n",
+      "   1 変える\tを\r\n",
+      "   1 報じる\tが\r\n",
+      "   1 含める\tを\r\n",
+      "   1 占める\tが\r\n",
+      "   1 加える\tに\r\n",
+      "   1 備える\tに\r\n",
+      "   1 めぐる\tを\r\n",
+      "   1 まじる\tの\r\n",
+      "   1 できる\tに\r\n",
+      "   1 できる\tが\r\n",
+      "   1 試みる\t\r\n",
+      "   1 目立つ\t\r\n",
+      "   1 生きる\t\r\n",
+      "   1 率いる\t\r\n",
+      "   1 できる\t\r\n",
+      "   1 する\tにかけて を\r\n",
+      "   1 する\tにおいて を\r\n",
+      "   1 省く\tによって\r\n",
+      "   1 する\tにおいて\r\n",
+      "   1 する\tとして において\r\n",
+      "   1 知る\tとして は も\r\n",
+      "   1 する\tとして は を\r\n",
+      "   1 する\tにより は\r\n",
+      "   1 する\tから に対して を\r\n",
+      "   1 する\tさえ どころか\r\n",
+      "   1 進む\tから として は\r\n",
+      "   1 操る\tたり により を\r\n",
+      "   1 する\tから など\r\n",
+      "   1 する\tから が て にとって は も\r\n",
+      "   1 する\tから が て など\r\n",
+      "   1 なる\tから が て で と は\r\n",
+      "   1 する\tから が で は\r\n",
+      "   1 よる\tなど に や\r\n",
+      "   1 なる\tから で と\r\n",
+      "   1 する\tなど は を\r\n",
+      "   1 する\tだけ て も\r\n",
+      "   1 する\tずつ は を\r\n",
+      "   1 する\tから で を\r\n",
+      "   1 行う\tまで を\r\n",
+      "   1 持つ\tから が\r\n",
+      "   1 扱う\tのみ を\r\n",
+      "   1 使う\tのに を\r\n",
+      "   1 介す\tから を\r\n",
+      "   1 する\tなど を\r\n",
+      "   1 する\tなど に\r\n",
+      "   1 する\tつつ と\r\n",
+      "   1 する\tから て\r\n",
+      "   1 進む\tから\r\n",
+      "   1 見る\tから\r\n",
+      "   1 行う\tから\r\n",
+      "   1 する\tより\r\n",
+      "   1 ある\tでも\r\n",
+      "   1 取る\tが に対して を\r\n",
+      "   1 使う\tに によって は\r\n",
+      "   1 する\tが によって を\r\n",
+      "   1 する\tが において も\r\n",
+      "   1 書く\tが について\r\n",
+      "   1 する\tを を通して\r\n",
+      "   1 する\tに につれて\r\n",
+      "   1 する\tが について\r\n",
+      "   1 ある\tが において\r\n",
+      "   1 ある\tが として に は も\r\n",
+      "   1 なる\tて として に は\r\n",
+      "   1 する\tが という に も\r\n",
+      "   1 行う\tに により を\r\n",
+      "   1 する\tが として は\r\n",
+      "   1 行く\tて により\r\n",
+      "   1 する\tと に対し\r\n",
+      "   1 する\tが により\r\n",
+      "   1 する\tが として\r\n",
+      "   1 見る\tて など に は も\r\n",
+      "   1 行う\tに まで を\r\n",
+      "   1 使う\tに のみ も\r\n",
+      "   1 使う\tで でも は\r\n",
+      "   1 する\tで など に\r\n",
+      "   1 する\tと まで\r\n",
+      "   1 行う\tは を をめぐって\r\n",
+      "   1 いる\tが て について は も\r\n",
+      "   1 なる\tが と にとって は\r\n",
+      "   1 する\tが に において は\r\n",
+      "   1 ある\tが で に対して は\r\n",
+      "   1 進む\tが に において\r\n",
+      "   1 出る\tが と に関して\r\n",
+      "   1 する\tて と において\r\n",
+      "   1 する\tが も を通じて\r\n",
+      "   1 する\tて で として に は\r\n",
+      "   1 する\tが で として に は\r\n",
+      "   1 返す\tか と に対し は\r\n",
+      "   1 思う\tが と という は\r\n",
+      "   1 ある\tが て として は\r\n",
+      "   1 出す\tが で により\r\n",
+      "   1 する\tで に により\r\n",
+      "   1 する\tが に により\r\n",
+      "   1 する\tが て として\r\n",
+      "   1 呼ぶ\tて と など は を\r\n",
+      "   1 する\tが で など に は\r\n",
+      "   1 至る\tに は まで も\r\n",
+      "   1 なる\tで と など は\r\n",
+      "   1 する\tに は まで を\r\n",
+      "   1 する\tが に まで を\r\n",
+      "   1 入る\tに は まで\r\n",
+      "   1 する\tで も より\r\n",
+      "   1 立つ\tが て に において は\r\n",
+      "   1 する\tが て と によって は\r\n",
+      "   1 する\tが て で として は\r\n",
+      "   1 する\tが て に により\r\n",
+      "   1 言う\tか て で と において は\r\n",
+      "   1 する\tて で に は を を通して\r\n",
+      "   1 する\tが て で と に は\r\n",
+      "   1 行う\tが て で に は\r\n",
+      "   1 なる\tが で と に は\r\n",
+      "   1 する\tが て で も を\r\n",
+      "   1 達す\tて で に は\r\n",
+      "   1 記す\tて で と は\r\n",
+      "   1 行う\tが で に は\r\n",
+      "   1 示す\tで に は を\r\n",
+      "   1 犯す\tで に も を\r\n",
+      "   1 扱う\tし で も を\r\n",
+      "   1 する\tて に は を\r\n",
+      "   1 する\tて に は も\r\n",
+      "   1 する\tて と ば も\r\n",
+      "   1 する\tて と は を\r\n",
+      "   1 する\tて と は も\r\n",
+      "   1 する\tて で と は\r\n",
+      "   1 する\tが で は を\r\n",
+      "   1 する\tが で に は\r\n",
+      "   1 する\tが て に は\r\n",
+      "   1 する\tが て と は\r\n",
+      "   1 する\tが て で を\r\n",
+      "   1 ある\tて で に は\r\n",
+      "   1 ある\tが て に は\r\n",
+      "   1 違う\tが と は\r\n",
+      "   1 達す\tで に は\r\n",
+      "   1 送る\tが に を\r\n",
+      "   1 語る\tで は を\r\n",
+      "   1 語る\tて と に\r\n",
+      "   1 行う\tで に を\r\n",
+      "   1 行う\tて に を\r\n",
+      "   1 行う\tて に は\r\n",
+      "   1 行う\tが で は\r\n",
+      "   1 握る\tが で を\r\n",
+      "   1 扱う\tで は を\r\n",
+      "   1 思う\tと に は\r\n",
+      "   1 呼ぶ\tに も を\r\n",
+      "   1 入る\tが で に\r\n",
+      "   1 なる\tに は も\r\n",
+      "   1 なる\tで に は\r\n",
+      "   1 なる\tて に は\r\n",
+      "   1 なる\tが に は\r\n",
+      "   1 なる\tが て と\r\n",
+      "   1 つく\tか が て\r\n",
+      "   1 だす\tが で を\r\n",
+      "   1 する\tに は も\r\n",
+      "   1 する\tで は も\r\n",
+      "   1 する\tて は を\r\n",
+      "   1 する\tて は も\r\n",
+      "   1 する\tて に を\r\n",
+      "   1 する\tて と を\r\n",
+      "   1 する\tて で も\r\n",
+      "   1 する\tて で は\r\n",
+      "   1 する\tて で に\r\n",
+      "   1 する\tが に は\r\n",
+      "   1 する\tが で は\r\n",
+      "   1 する\tが で に\r\n",
+      "   1 する\tが て は\r\n",
+      "   1 する\tか と は\r\n",
+      "   1 いう\tて と ば\r\n",
+      "   1 ある\tに は も\r\n",
+      "   1 ある\tが で は\r\n",
+      "   1 ある\tが て は\r\n",
+      "   1 ある\tか が に\r\n",
+      "   1 開く\tに を\r\n",
+      "   1 選ぶ\tが で\r\n",
+      "   1 違う\tと は\r\n",
+      "   1 評す\tと も\r\n",
+      "   1 言う\tと は\r\n",
+      "   1 行う\tは を\r\n",
+      "   1 行う\tに を\r\n",
+      "   1 行う\tで を\r\n",
+      "   1 行う\tて を\r\n",
+      "   1 行う\tて に\r\n",
+      "   1 臨む\tが に\r\n",
+      "   1 立つ\tに を\r\n",
+      "   1 示す\tが に\r\n",
+      "   1 示す\tが で\r\n",
+      "   1 生む\tは を\r\n",
+      "   1 残す\tも を\r\n",
+      "   1 於く\tか に\r\n",
+      "   1 挑む\tで に\r\n",
+      "   1 持つ\tが に\r\n",
+      "   1 扱う\tに を\r\n",
+      "   1 打つ\tに を\r\n",
+      "   1 学ぶ\tに を\r\n",
+      "   1 呼ぶ\tと は\r\n",
+      "   1 出す\tに を\r\n",
+      "   1 出す\tが に\r\n",
+      "   1 使う\tが は\r\n",
+      "   1 よる\tか に\r\n",
+      "   1 やる\tて に\r\n",
+      "   1 なる\tで は\r\n",
+      "   1 なる\tが に\r\n",
+      "   1 する\tに も\r\n",
+      "   1 する\tに の\r\n",
+      "   1 する\tと も\r\n",
+      "   1 する\tて は\r\n",
+      "   1 する\tて で\r\n",
+      "   1 する\tが は\r\n",
+      "   1 する\tが と\r\n",
+      "   1 いう\tて と\r\n",
+      "   1 ある\tは も\r\n",
+      "   1 ある\tて に\r\n",
+      "   1 ある\tが は\r\n",
+      "   1 ある\tが で\r\n",
+      "   1 限る\tに\r\n",
+      "   1 適す\tに\r\n",
+      "   1 進む\tが\r\n",
+      "   1 誓う\tが\r\n",
+      "   1 記す\tと\r\n",
+      "   1 言う\tと\r\n",
+      "   1 言う\tが\r\n",
+      "   1 見る\tが\r\n",
+      "   1 行う\tに\r\n",
+      "   1 著す\tを\r\n",
+      "   1 続く\tに\r\n",
+      "   1 築く\tを\r\n",
+      "   1 示す\tを\r\n",
+      "   1 破る\tも\r\n",
+      "   1 操る\tを\r\n",
+      "   1 挑む\tに\r\n",
+      "   1 指す\tを\r\n",
+      "   1 担う\tを\r\n",
+      "   1 扱う\tの\r\n",
+      "   1 思う\tと\r\n",
+      "   1 売る\tの\r\n",
+      "   1 呼ぶ\tも\r\n",
+      "   1 含む\tを\r\n",
+      "   1 去る\tは\r\n",
+      "   1 創る\tは\r\n",
+      "   1 出す\tを\r\n",
+      "   1 作る\tを\r\n",
+      "   1 作る\tも\r\n",
+      "   1 伴う\tに\r\n",
+      "   1 やる\tを\r\n",
+      "   1 なる\tも\r\n",
+      "   1 なる\tは\r\n",
+      "   1 なす\tも\r\n",
+      "   1 でる\tが\r\n",
+      "   1 つく\tは\r\n",
+      "   1 する\tも\r\n",
+      "   1 いる\tも\r\n",
+      "   1 ある\tに\r\n",
+      "   1 読む\t\r\n",
+      "   1 売る\t\r\n",
+      "   1 なる\t\r\n",
+      "   1 あり\t\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! cat files/45.txt | sort | uniq -c | sort -k 1 -n -r "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   8 行う\tを\r\n",
+      "   3 なる\tに は\r\n",
+      "   3 なる\tが と\r\n",
+      "   2 なる\tに\r\n",
+      "   2 なる\tと\r\n",
+      "   1 与える\tが など に\r\n",
+      "   1 与える\tに は を\r\n",
+      "   1 与える\tが に\r\n",
+      "   1 なる\tから が て で と は\r\n",
+      "   1 なる\tから で と\r\n",
+      "   1 行う\tまで を\r\n",
+      "   1 行う\tから\r\n",
+      "   1 なる\tて として に は\r\n",
+      "   1 行う\tに により を\r\n",
+      "   1 行う\tに まで を\r\n",
+      "   1 行う\tは を をめぐって\r\n",
+      "   1 なる\tが と にとって は\r\n",
+      "   1 なる\tで と など は\r\n",
+      "   1 行う\tが て で に は\r\n",
+      "   1 なる\tが で と に は\r\n",
+      "   1 行う\tが で に は\r\n",
+      "   1 行う\tで に を\r\n",
+      "   1 行う\tて に を\r\n",
+      "   1 行う\tて に は\r\n",
+      "   1 行う\tが で は\r\n",
+      "   1 なる\tに は も\r\n",
+      "   1 なる\tで に は\r\n",
+      "   1 なる\tて に は\r\n",
+      "   1 なる\tが に は\r\n",
+      "   1 なる\tが て と\r\n",
+      "   1 行う\tは を\r\n",
+      "   1 行う\tに を\r\n",
+      "   1 行う\tで を\r\n",
+      "   1 行う\tて を\r\n",
+      "   1 行う\tて に\r\n",
+      "   1 なる\tで は\r\n",
+      "   1 なる\tが に\r\n",
+      "   1 行う\tに\r\n",
+      "   1 なる\tも\r\n",
+      "   1 なる\tは\r\n",
+      "   1 なる\t\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! grep -E \"^(行う|なる|与える)\" files/45.txt | sort | uniq -c | sort -k 1 -n -r "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5225,6 +5780,13 @@
     "作り出す\tで は を\t会議で ジョンマッカーシーは 用語を\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
