--- a/50-59.ipynb
+++ b/50-59.ipynb
@@ -9,13 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,10 +25,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2pageSessions.csv check.txt         newsCorpora.csv   readme.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls files/NewsAggregatorDataset/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "head: Error reading files\n",
+      "210713\t\"The Best Reactions To The Supposed Video of Solange Knowles & Jay Z  ...\thttp://www.hiphopdx.com/index/news/id.28728/title.-the-best-reactions-to-the-supposed-video-of-solange-knowles-jay-z-fighting-in-an-elevator-list-by-time/\tHipHopDX\te\tdku0uRoeehpC9JM1RoZ4n0fg8cyoM\twww.hiphopdx.com\t1399983366398\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head -210713 files files/NewsAggregatorDataset/newsCorpora.csv | tail -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"The Best Reactions To The Supposed Video of Solange Knowles & Jay Z  ...\n",
+    "## ↑ダブルクオーテーションが片側しかないとDictreaderがうまく読み込まないので修正する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "\n",
+    "\n",
+    "PUBLISHERS = ('Reuters','Huffington Post','Businessweek','Contactmusic.com','Daily Mail')\n",
+    "CATEGORIES = ('b','t','e','m')\n",
+    "\n",
+    "y_X_list = []\n",
+    "\n",
+    "with open('files/NewsAggregatorDataset/newsCorpora.csv') as f:\n",
+    "    reader = csv.DictReader(f,delimiter='\\t',fieldnames=[\"id\",\"title\",\"url\",\"publisher\",\"category\",\"story\",\"hostname\",\"timestamp\"])\n",
+    "    y_X_list = [(row['category'],row['title']) for row in reader if row['publisher'] in PUBLISHERS and row['category'] in CATEGORIES]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y len :13340, X len: 13340\n",
+      "train:10672, valid:1334, test:1334\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from typing import List\n",
+    "import csv\n",
+    "y = [y for y, x in  y_X_list]\n",
+    "X = [x for y, x in  y_X_list]\n",
+    "\n",
+    "\n",
+    "print(f\"y len :{len(y)}, X len: {len(X)}\")\n",
+    "\n",
+    "X_train, X_tmp, y_train, y_tmp = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "X_valid, X_test, y_valid, y_test = train_test_split(X_tmp, y_tmp, test_size=0.50, random_state=42)\n",
+    "\n",
+    "print(f\"train:{len(X_train)}, valid:{len(X_valid)}, test:{len(X_test)}\")\n",
+    "\n",
+    "train = [[_y_train,_x_train] for _y_train,_x_train  in zip(y_train,X_train)]\n",
+    "valid = [[_y_valid,_x_valid] for _y_valid,_x_valid in zip(y_valid,X_valid)]\n",
+    "test = [[_y_test,_x_test] for _y_test,_x_test in zip(y_test,X_test)]\n",
+    "\n",
+    "def save_data(data:List[List],file_name):\n",
+    "    with open(file_name, mode='w', encoding='utf-8') as f:\n",
+    "        writer = csv.writer(f,delimiter='\\t')\n",
+    "        writer.writerows(data)\n",
+    "\n",
+    "save_data(train,'files/train.txt')\n",
+    "save_data(valid,'files/valid.txt')\n",
+    "save_data(test,'files/test.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,(y,x) in enumerate(train):\n",
+    "    if '210714' in x:\n",
+    "        print(i,x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\tDraghi Unites Euro Bulls With Bears Watching $1.35: Currencies\r",
+      "\r\n",
+      "m\tA Guide To Spring Gardening, For Allergy-Sufferers\r",
+      "\r\n",
+      "e\tBy Odin's beard: Marvel creates a storm of controversy as it reveals Thor is a  ...\r",
+      "\r\n",
+      "b\tWalmart Strikes Deal That Will Hopefully Make Organic Food Cheaper\r",
+      "\r\n",
+      "e\tThe Voice contestant Kristen Merlin goes silent mid-song after microphone fails  ...\r",
+      "\r\n",
+      "t\tGender Non-Conforming Teen Forced To Remove Makeup For Driver's License  ...\r",
+      "\r\n",
+      "e\tFrom Cleaning Toilets to Intergalactic Royalty: Jupiter Ascending [Trailer +  ...\r",
+      "\r\n",
+      "t\tCORRECTED-Sprint's revenue beats estimate as network upgrade progresses\r",
+      "\r\n",
+      "e\t'My mother touched me I'm certain': Hip hop mogul gunned down at mom's  ...\r",
+      "\r\n",
+      "b\tFairfax CEO Watsa Probed by Regulator in Trading Review\r",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head files/train.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!grep 210714 files/train.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4538 b\n",
+      "4228 e\n",
+      " 701 m\n",
+      "1205 t\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cut -f 1 files/train.txt | sort | uniq -c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 531 b\r\n",
+      " 529 e\r\n",
+      " 119 m\r\n",
+      " 155 t\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cut -f 1 files/valid.txt | sort | uniq -c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 558 b\r\n",
+      " 522 e\r\n",
+      "  90 m\r\n",
+      " 164 t\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cut -f 1 files/test.txt | sort | uniq -c"
+   ]
   },
   {
    "cell_type": "markdown",
