--- a/50-59.ipynb
+++ b/50-59.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +77,19 @@
     "\n",
     "PUBLISHERS = ('Reuters','Huffington Post','Businessweek','Contactmusic.com','Daily Mail')\n",
     "CATEGORIES = ('b','t','e','m')\n",
+    "CATEGORIES_DIC = {'b':0,'t':1,'e':2,'m':3}\n",
+    "CATEGORIES_DIC_inv = {0:'business',1:'science and technology',2:'entertaiment',3:'health'}\n",
     "\n",
     "y_X_list = []\n",
     "\n",
     "with open('files/NewsAggregatorDataset/newsCorpora.csv') as f:\n",
     "    reader = csv.DictReader(f,delimiter='\\t',fieldnames=[\"id\",\"title\",\"url\",\"publisher\",\"category\",\"story\",\"hostname\",\"timestamp\"])\n",
-    "    y_X_list = [(row['category'],row['title']) for row in reader if row['publisher'] in PUBLISHERS and row['category'] in CATEGORIES]\n"
+    "    y_X_list = [(CATEGORIES_DIC[row['category']],row['title']) for row in reader if row['publisher'] in PUBLISHERS and row['category'] in CATEGORIES]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,43 +132,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i,(y,x) in enumerate(train):\n",
-    "    if '210714' in x:\n",
-    "        print(i,x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b\tDraghi Unites Euro Bulls With Bears Watching $1.35: Currencies\r",
+      "0\tDraghi Unites Euro Bulls With Bears Watching $1.35: Currencies\r",
       "\r\n",
-      "m\tA Guide To Spring Gardening, For Allergy-Sufferers\r",
+      "3\tA Guide To Spring Gardening, For Allergy-Sufferers\r",
       "\r\n",
-      "e\tBy Odin's beard: Marvel creates a storm of controversy as it reveals Thor is a  ...\r",
+      "2\tBy Odin's beard: Marvel creates a storm of controversy as it reveals Thor is a  ...\r",
       "\r\n",
-      "b\tWalmart Strikes Deal That Will Hopefully Make Organic Food Cheaper\r",
+      "0\tWalmart Strikes Deal That Will Hopefully Make Organic Food Cheaper\r",
       "\r\n",
-      "e\tThe Voice contestant Kristen Merlin goes silent mid-song after microphone fails  ...\r",
+      "2\tThe Voice contestant Kristen Merlin goes silent mid-song after microphone fails  ...\r",
       "\r\n",
-      "t\tGender Non-Conforming Teen Forced To Remove Makeup For Driver's License  ...\r",
+      "1\tGender Non-Conforming Teen Forced To Remove Makeup For Driver's License  ...\r",
       "\r\n",
-      "e\tFrom Cleaning Toilets to Intergalactic Royalty: Jupiter Ascending [Trailer +  ...\r",
+      "2\tFrom Cleaning Toilets to Intergalactic Royalty: Jupiter Ascending [Trailer +  ...\r",
       "\r\n",
-      "t\tCORRECTED-Sprint's revenue beats estimate as network upgrade progresses\r",
+      "1\tCORRECTED-Sprint's revenue beats estimate as network upgrade progresses\r",
       "\r\n",
-      "e\t'My mother touched me I'm certain': Hip hop mogul gunned down at mom's  ...\r",
+      "2\t'My mother touched me I'm certain': Hip hop mogul gunned down at mom's  ...\r",
       "\r\n",
-      "b\tFairfax CEO Watsa Probed by Regulator in Trading Review\r",
+      "0\tFairfax CEO Watsa Probed by Regulator in Trading Review\r",
       "\r\n"
      ]
     }
@@ -177,26 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!grep 210714 files/train.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4538 b\n",
-      "4228 e\n",
-      " 701 m\n",
-      "1205 t\n"
+      "4538 0\n",
+      "1205 1\n",
+      "4228 2\n",
+      " 701 3\n"
      ]
     }
    ],
@@ -206,17 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 531 b\r\n",
-      " 529 e\r\n",
-      " 119 m\r\n",
-      " 155 t\r\n"
+      " 531 0\r\n",
+      " 155 1\r\n",
+      " 529 2\r\n",
+      " 119 3\r\n"
      ]
     }
    ],
@@ -226,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 558 b\r\n",
-      " 522 e\r\n",
-      "  90 m\r\n",
-      " 164 t\r\n"
+      " 558 0\r\n",
+      " 164 1\r\n",
+      " 522 2\r\n",
+      "  90 3\r\n"
      ]
     }
    ],
@@ -253,11 +235,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 特徴量1:Bag of Words (1-gram, 2-gram, binary=True)\n",
+    "参考:https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html#sklearn.feature_extraction.text.CountVectorizer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train: (10672, 75528)\n",
+      "valid: (1334, 75528)\n",
+      "test: (1334, 75528)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import numpy as np\n",
+    "\n",
+    "count_vect = CountVectorizer(binary=True,ngram_range=(1,2),dtype=np.int8)\n",
+    "X_train_bow = count_vect.fit_transform(X_train).toarray()\n",
+    "X_valid_bow = count_vect.transform(X_valid).toarray()\n",
+    "X_test_bow = count_vect.transform(X_test).toarray()\n",
+    "\n",
+    "print(f\"train: {X_train_bow.shape}\\nvalid: {X_valid_bow.shape}\\ntest: {X_test_bow.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10672, 1)\n",
+      "type :int8 , shape:(10672, 75528)\n",
+      "type : int8\n",
+      "train: (10672, 75529)\n",
+      "valid: (1334, 75529)\n",
+      "test: (1334, 75529)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.array([y_train],dtype=np.int8).T.shape)\n",
+    "print(f\"type :{X_train_bow.dtype} , shape:{X_train_bow.shape}\")\n",
+    "train_bow = np.hstack((np.array([y_train]).T, X_train_bow)).astype(np.int8)\n",
+    "valid_bow = np.hstack((np.array([y_valid]).T, X_valid_bow)).astype(np.int8)\n",
+    "test_bow = np.hstack((np.array([y_test]).T, X_test_bow)).astype(np.int8)\n",
+    "print(f\"type : {train_bow.dtype}\")\n",
+    "print(f\"train: {train_bow.shape}\\nvalid: {valid_bow.shape}\\ntest: {test_bow.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "保存すると各ファイル5GB以上になるので保存しない!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 特徴量2:tfidf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 特徴量3: word2vec"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,10 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibLinear]"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "clf = LogisticRegression(random_state=0,dual=True,solver='liblinear',verbose=1).fit(X_train_bow,y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -284,10 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'entertaiment'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentense = \"science is important to improve your life.\"\n",
+    "CATEGORIES_DIC_inv[clf.predict(count_vect.transform([sentense]).toarray())[0]]"
+   ]
   },
   {
    "cell_type": "markdown",
