54-57までやった

--- a/50-59.ipynb
+++ b/50-59.ipynb
@@ -391,7 +391,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "y_train_pred =  clf.predict(X_train_bow)\n",
+    "y_test_pred = clf.predict(X_test_bow)\n",
+    "\n",
+    "print(f\"train accuracy:{accuracy_score(y_train,y_train_pred)}\\ntest accuracy{accuracy_score(y_test,y_test_pred)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -406,7 +412,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "print(f\"train accuracy:\\n{confusion_matrix(y_train,y_train_pred)}\\ntest accuracy:\\n{confusion_matrix(y_test,y_test_pred)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,7 +430,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import precision_score,recall_score,f1_score\n",
+    "pre_micro =precision_score(y_test,y_test_pred,average='micro')\n",
+    "pre_macro =precision_score(y_test,y_test_pred,average='macro')\n",
+    "rec_micro =recall_score(y_test,y_test_pred,average='micro')\n",
+    "rec_macro = recall_score(y_test,y_test_pred,average='macro')\n",
+    "f1_micro =f1_score(y_test,y_test_pred,average='micro')\n",
+    "f1_macro =f1_score(y_test,y_test_pred,average='macro')\n",
+    "print(\"precision micro:\",precision_score(y_test,y_test_pred,average='micro'))\n",
+    "print(\"precision macro:\",precision_score(y_test,y_test_pred,average='macro'))\n",
+    "print(\"recall micro:\",recall_score(y_test,y_test_pred,average='micro'))\n",
+    "print(\"recall macro:\",recall_score(y_test,y_test_pred,average='macro'))\n",
+    "print(\"f1 micro:\",f1_score(y_test,y_test_pred,average='micro'))\n",
+    "print(\"f1 macro:\",f1_score(y_test,y_test_pred,average='macro'))\n",
+    "\n",
+    "# ↓真面目に計算するとこんな感じ\n",
+    "# print(\"f1 micro:\",2*pre_micro*rec_micro/(pre_micro+rec_micro))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 別々で計算すると....(イケてる書き方知りたい)\n",
+    "a = np.array(y_test)[y_test_pred == 0]\n",
+    "a[a > 1] = 1\n",
+    "pre_0 = precision_score(1 - a , 1-y_test_pred[y_test_pred == 0])\n",
+    "\n",
+    "a = np.array(y_test)[y_test_pred == 1]\n",
+    "a[a != 1] = 0\n",
+    "pre_1 = precision_score(a , y_test_pred[y_test_pred == 1])\n",
+    "\n",
+    "a = np.array(y_test)[y_test_pred == 2]\n",
+    "a[a != 2] = 0\n",
+    "a[a == 2] = 1\n",
+    "pre_2 = precision_score(a , y_test_pred[y_test_pred == 2]-1)\n",
+    "\n",
+    "a = np.array(y_test)[y_test_pred == 3]\n",
+    "a[a != 3] = 0\n",
+    "a[a == 3] = 1\n",
+    "pre_3 = precision_score(a , y_test_pred[y_test_pred == 3]-2)\n",
+    "print('precision micro:',(pre_0*len(y_test_pred[y_test_pred == 0])+pre_1*len(y_test_pred[y_test_pred == 1])+pre_2*len(y_test_pred[y_test_pred == 2])+pre_3*len(y_test_pred[y_test_pred == 3]))/len(y_test))\n",
+    "print('precision macro:',(pre_0+pre_1+pre_2+pre_3)/4)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,7 +490,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top10 = clf.coef_.argsort()[:,:10]\n",
+    "bottom10 = clf.coef_.argsort()[:,-10:][:,::-1]\n",
+    "print(CATEGORIES_DIC_inv[0],\" top 10:\",','.join(np.array(count_vect.get_feature_names())[top10[0]]))\n",
+    "print(CATEGORIES_DIC_inv[0],\" bottom 10:\",','.join(np.array(count_vect.get_feature_names())[bottom10[0]]))\n",
+    "\n",
+    "print(CATEGORIES_DIC_inv[1],\" top 10:\",','.join(np.array(count_vect.get_feature_names())[top10[1]]))\n",
+    "print(CATEGORIES_DIC_inv[1],\" bottom 10:\",','.join(np.array(count_vect.get_feature_names())[bottom10[1]]))\n",
+    "\n",
+    "print(CATEGORIES_DIC_inv[2],\" top 10:\",','.join(np.array(count_vect.get_feature_names())[top10[2]]))\n",
+    "print(CATEGORIES_DIC_inv[2],\" bottom 10:\",','.join(np.array(count_vect.get_feature_names())[bottom10[2]]))\n",
+    "\n",
+    "print(CATEGORIES_DIC_inv[3],\" top 10:\",','.join(np.array(count_vect.get_feature_names())[top10[3]]))\n",
+    "print(CATEGORIES_DIC_inv[3],\" bottom 10:\",','.join(np.array(count_vect.get_feature_names())[bottom10[3]]))\n",
+    "# 見た感じどうやら値が低いほうが特徴を表しているっぽい"
+   ]
   },
   {
    "cell_type": "markdown",
