--- a/50-59.ipynb
+++ b/50-59.ipynb
@@ -2848,61 +2848,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed: 34.8min remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed: 34.8min finished\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "random_forest = RandomForestClassifier(max_depth=2, random_state=0)\n",
     "random_forest_params= dict(n_estimators=range(20,300,50),criterion=['gini','entropy'])\n",
-    "random_forest_clf = RandomizedSearchCV(random_forest, random_forest_params, random_state=0,n_jobs=-1,verbose=1)\n",
+    "random_forest_clf = RandomizedSearchCV(random_forest, random_forest_params, random_state=0,n_jobs=-1,verbose=1,n_iter=3,cv=2)\n",
     "\n",
     "random_forest_search = random_forest_clf.fit(np.vstack([X_train_tfidf,X_valid_tfidf]), y_train+y_valid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed: 45.7min remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of   6 | elapsed: 45.7min finished\n"
+     ]
+    }
+   ],
    "source": [
+    "from scipy.stats import uniform\n",
+    "\n",
     "logistic_regression = LogisticRegression(solver='saga', tol=1e-2, max_iter=200, random_state=0)\n",
     "logistic_regression_params = dict(C=uniform(loc=0, scale=4),penalty=['l2', 'l1'])\n",
-    "logistic_regression_clf = RandomizedSearchCV(logistic_regression, logistic_regression_params, random_state=0,n_jobs=-1,,verbose=1)\n",
+    "logistic_regression_clf = RandomizedSearchCV(logistic_regression, logistic_regression_params, random_state=0,n_jobs=-1,verbose=1,n_iter=3,cv=2)\n",
     "logistic_regression_search = logistic_regression_clf.fit(np.vstack([X_train_tfidf,X_valid_tfidf]), y_train+y_valid)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10684"
+       "0.9094311377245509"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "accuracy_score(y_test,logistic_regression_search.predict(y_test_pred))"
+    "accuracy_score(y_test,logistic_regression_search.predict(X_test_tfidf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5074850299401198"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "accuracy_score(y_test,random_forest_search.predict(y_test_pred))"
+    "accuracy_score(y_test,random_forest_search.predict(X_test_tfidf))"
    ]
   },
   {
@@ -2918,18 +2964,6 @@
    "display_name": "Python 3.8.2 64-bit ('nlp-100-knocks-2020-UTXiV_Xd-py3.8': venv)",
    "language": "python",
    "name": "python38264bitnlp100knocks2020utxivxdpy38venv6f1bdc414e1c42079574c87f4d492959"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
   }
  },
  "nbformat": 4,
